[package]
name = "csgo-server-scanner"
version = "0.1.0"
edition = "2021"
default-run = "csgo-server-scanner"

# Phase 0 throwaway: prove out the two wire protocols before we build anything.
[[bin]]
name = "spike"
path = "src/bin/spike.rs"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
serde_json = "1"
